--- a/FarmacorpPosExpress.Business/FarmacorpPosExpress.Business.csproj
+++ b/FarmacorpPosExpress.Business/FarmacorpPosExpress.Business.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FarmacorpPosExpress.Data\FarmacorpPosExpress.Data.csproj" />
+    <ProjectReference Include="..\FarmacorpPosExpressModels\FarmacorpPosExpress.Models.csproj" />
+  </ItemGroup>
+
 </Project>
