--- a/FarmacorpPosExpress/FarmacorpPosExpress.ConsoleApp.csproj
+++ b/FarmacorpPosExpress/FarmacorpPosExpress.ConsoleApp.csproj
@@ -8,8 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FarmacorpPosExpress.Business\FarmacorpPosExpress.Business.csproj" />
+    <ProjectReference Include="..\FarmacorpPosExpressModels\FarmacorpPosExpress.Models.csproj" />
   </ItemGroup>
 
 </Project>
